# RyskNode_LogicModel_Scrapper

./: .env.sample  .gitignore  GEMINI.md  README.md  V2.2.md  V2.md  create_tables.py  pyproject.toml
.github/workflows/: deploy.yml
models/: X_train.pkl  lgbm_calibrated.pkl  lgd.pkl  manifest.json  meta.pkl  scorecard.pkl  xgb_calibrated.pkl
report_templates/: Pralyon_S1_Honest_Digital_V2.html  Pralyon_S2_Operational_Limit_Assessment_V2 (1) (1).html  Pralyon_S3_Portfolio_Monitor_V2.html  Pralyon_S4_Vendor_Due_Diligence_V2.html  Pralyon_S5_Sector_Intelligence_V2.html
scratch/: verify_ppre.py
scripts/: train_models.py
src/: __about__.py  __main__.py  constants.py  error_conf.py  settings.py
src/api/: __init__.py  assess.py  credit_limit.py  scrape.py  sector_intel.py  sync.py
src/api/schema/: __init__.py  ppre.py  scrape.py  sync.py
src/app/: bootstrap.py  dependency.py
src/common/: domains.py  enums.py  repository.py  schema.py
src/common/adapter/: base.py  falcon_biz.py  redis_backend.py  scraper_base.py  tracxn.py
src/common/base/: bootstrap.py  constants.py  context_vars.py  datetime_util.py  deps.py  error.py  error_conf.py  logger.py  middlewares.py  router.py  settings.py  singlton_meta.py  utils.py
src/domain/: company.py
src/model/: __init__.py  company.py  company_data.py  company_data_snapshot.py
src/repository/: __init__.py  company_repository.py
src/service/: __init__.py  artifact_service.py  data_gov_sync_service.py  ppre_service.py  report_service.py  scrape_service.py
templates/: s1_risk_report.html  s2_credit_report.html
(+48 files in other folders)
